==== 1.1.2 ====
Fix JS Script error on empty third party method array

==== 1.1.1 ====
Added token cache to reduce API-Calls

==== 1.1.0 ====
Added third party payment modul support outside iframe

==== 1.0.5 ====
Compatibility with Amazon_Payment
Compatibility with IWD_Opc
Compatibility with Swissup_Firecheckout
Compatibility with Magestore_OneStepCheckout

==== 1.0.4 ====
Fixed tax calculation with special discount settings

==== 1.0.3 ====
Fixed always failing credential validation on payment method config save.

==== 1.0.2 ====
Fixed Javascript errors with Magento 2.1 on payment method block.

==== 1.0.1 ====
Added PUI legal text

==== 1.0.0 ====
PayPal PLUS is a solution where PayPal offers PayPal, Credit Card and ELV (pay upon invoice will be added in a later phase) as individual payment options on the payment selection page.
Based on the payment method selected by the buyer, he will at a later stage be presented with either the PayPal Login page or an input mask for bank / credit card details.