@@ -1,5 +1,6 @@
 ==== 1.1.2 ====
 Fix JS Script error on empty third party method array
+Fix for missing ShippingAddress on virtual orders
 
 ==== 1.1.1 ====
 Added token cache to reduce API-Calls
